tests/spec/lex/snapshots/scientific_with_underscore.snap
---
source: tests/spec/lex/mod.rs
description: 1_000e10
---
LexResult {
    tokens: [
        Token {
            kind: Float,
            text: "1_000e10",
            byte_offset: 0,
            byte_length: 8,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 8,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
