tests/spec/lex/snapshots/shebang_before_file_comment.snap
---
source: tests/spec/lex/mod.rs
description: |-
  #!/usr/bin/env -S lis run
  //! A tool.
  fn main() {}
---
LexResult {
    tokens: [
        Token {
            kind: Shebang,
            text: "#!/usr/bin/env -S lis run",
            byte_offset: 0,
            byte_length: 25,
        },
        Token {
            kind: FileComment,
            text: "A tool.",
            byte_offset: 26,
            byte_length: 11,
        },
        Token {
            kind: Function,
            text: "fn",
            byte_offset: 38,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "main",
            byte_offset: 41,
            byte_length: 4,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 45,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 46,
            byte_length: 1,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 48,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 49,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 50,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
