tests/spec/lex/snapshots/shebang_leaves_a_carriage_return_newline_out_of_the_token.snap
---
source: tests/spec/lex/mod.rs
description: |-
  #!/usr/bin/env -S lis run\r
  fn main() {}
---
LexResult {
    tokens: [
        Token {
            kind: Shebang,
            text: "#!/usr/bin/env -S lis run",
            byte_offset: 0,
            byte_length: 25,
        },
        Token {
            kind: Function,
            text: "fn",
            byte_offset: 27,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "main",
            byte_offset: 30,
            byte_length: 4,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 34,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 35,
            byte_length: 1,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 37,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 38,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 39,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
