tests/spec/lex/snapshots/shebang_without_an_interpreter_is_not_a_shebang.snap
---
source: tests/spec/lex/mod.rs
description: |-
  #!
  fn main() {}
---
LexResult {
    tokens: [
        Token {
            kind: Hash,
            text: "#",
            byte_offset: 0,
            byte_length: 1,
        },
        Token {
            kind: Bang,
            text: "!",
            byte_offset: 1,
            byte_length: 1,
        },
        Token {
            kind: Function,
            text: "fn",
            byte_offset: 3,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "main",
            byte_offset: 6,
            byte_length: 4,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 10,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 11,
            byte_length: 1,
        },
        Token {
            kind: LeftCurlyBrace,
            text: "{",
            byte_offset: 13,
            byte_length: 1,
        },
        Token {
            kind: RightCurlyBrace,
            text: "}",
            byte_offset: 14,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 15,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
