tests/spec/lex/snapshots/slice_pattern_empty.snap
---
source: tests/spec/lex/mod.rs
description: "[]"
---
LexResult {
    tokens: [
        Token {
            kind: LeftSquareBracket,
            text: "[",
            byte_offset: 0,
            byte_length: 1,
        },
        Token {
            kind: RightSquareBracket,
            text: "]",
            byte_offset: 1,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 2,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
