tests/spec/lex/snapshots/slice_pattern_with_rest.snap
---
source: tests/spec/lex/mod.rs
description: "[first, ..rest]"
---
LexResult {
    tokens: [
        Token {
            kind: LeftSquareBracket,
            text: "[",
            byte_offset: 0,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "first",
            byte_offset: 1,
            byte_length: 5,
        },
        Token {
            kind: Comma,
            text: ",",
            byte_offset: 6,
            byte_length: 1,
        },
        Token {
            kind: DotDot,
            text: "..",
            byte_offset: 8,
            byte_length: 2,
        },
        Token {
            kind: Identifier,
            text: "rest",
            byte_offset: 10,
            byte_length: 4,
        },
        Token {
            kind: RightSquareBracket,
            text: "]",
            byte_offset: 14,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 15,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
