tests/spec/lex/snapshots/string_literal.snap
---
source: tests/spec/lex/mod.rs
description: "\"hello world\""
---
LexResult {
    tokens: [
        Token {
            kind: String,
            text: "\"hello world\"",
            byte_offset: 0,
            byte_length: 13,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 13,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
